yaml_parser/tests/fail/wrong-indented-sequence-item.snap
---
source: yaml_parser/tests/fail.rs
---
parse error at line 2, column 2
  |
2 |  - item1
  |  ^
invalid indentation
